@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-10T16:26:12Z",
+  "timestamp" : "2022-08-12T08:22:25Z",
   "count_outdated" : 289,
   "uniques_outdated" : 176,
-  "count" : 295,
-  "uniques" : 181,
+  "count" : 297,
+  "uniques" : 182,
   "clones" : [
     {
       "timestamp": "2022-08-03T00:00:00Z",
@@ -18,6 +18,13 @@
       "count_minmax": [ 4, 5 ],
       "uniques": 4,
       "uniques_minmax": [ 3, 4 ]
+    },
+    {
+      "timestamp": "2022-08-12T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
