@@ -1,5 +1,5 @@
 {
-  "count": 6,
+  "count": 8,
   "uniques": 5,
   "clones": [
     {
@@ -11,6 +11,11 @@
       "timestamp": "2022-08-09T00:00:00Z",
       "count": 5,
       "uniques": 4
+    },
+    {
+      "timestamp": "2022-08-12T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
